docs(gtk2): fix cross-platform and shadowJar concerns
Three issues corrected in the Gtk2 JavaFX plan:

1. Apple Silicon classifier: replace bare "mac" with conditional
   "mac-aarch64" for aarch64 (M1/M2/M3) vs "mac" for Intel.
   The javafxplugin detects this automatically; the manual snippet
   now includes the os.arch check.

2. shadowJar conflict: JavaFX JPMS modules cannot be merged into a
   fat JAR (duplicate module-info.class, broken native-lib extraction).
   Switch to compileOnly + separate javafxRuntime configuration that
   copies JARs to lib/javafx/ at build time. Add jperl-gtk / jperl-gtk.bat
   wrapper scripts that add --module-path lib/javafx at launch.

3. Linux runtime dependencies: document that the JavaFX GTK3 native
   peer requires libgtk-3.so / libpango / libfreetype / libXtst at
   runtime on Linux. Server deployments without these should fall back
   to Monocle headless; Gtk2.java must catch UnsatisfiedLinkError and
   degrade gracefully.

Also replace the already-answered "shadowJar size" and "macOS Quartz vs
Monocle" open questions with the remaining real open questions:
jperl auto-reexec, jcpan distroprefs for Gtk2, and Linux graceful
degradation on missing system libs.

Generated with [Devin](https://cli.devin.ai/docs)

Co-Authored-By: Devin <158243242+devin-ai-integration[bot]@users.noreply.github.com>